--- a/style.css
+++ b/style.css
@@ -878,6 +878,10 @@ a[target="_blank"] {
 
 
 @media (max-width: 360px) {
+
+  html {
+      overflow-x: hidden;
+  }
   .hero {
         padding-top: 50%;
     }
