--- a/style.css
+++ b/style.css
@@ -886,6 +886,7 @@ a[target="_blank"] {
         display: inline-block;
         max-width: 100%;
         height: auto;
+        margin-bottom: 30px;
     }
   
   .consumer-img {
