--- a/style.css
+++ b/style.css
@@ -908,6 +908,12 @@ a[target="_blank"] {
     text-align: center;
     }
 
+    .consumer a[class="btn"] {
+        position: relative;
+        top: 1.5rem;
+        margin-bottom: 20px;
+    }
+
   
   
 
